--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@frontity/html2react": "^1.6.1",
     "@frontity/mars-theme": "./packages/mars-theme",
     "@frontity/tiny-router": "^1.4.0",
+    "@frontity/wp-comments": "0.2.6",
     "@frontity/wp-source": "^1.11.2",
     "@frontity/yoast": "2.1.1",
     "@material-ui/core": "4.11.3",
