--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material-ui/icons": "4.11.2",
     "frontity": "^1.14.2",
     "prop-types": "15.7.2",
-    "react-bootstrap": "1.5.2"
+    "react-bootstrap": "1.5.2",
+    "react-helmet": "6.1.0"
   }
 }
