--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "frontity": "^1.14.2",
     "prop-types": "15.7.2",
     "react-bootstrap": "1.5.2",
+    "react-cryptocoins": "1.0.11",
     "react-helmet": "6.1.0"
   }
 }
