--- a/packages/mars-theme/package.json
+++ b/packages/mars-theme/package.json
@@ -2,16 +2,20 @@
   "name": "@frontity/mars-theme",
   "version": "1.4.3",
   "description": "A starter theme for Frontity",
-  "keywords": [
-    "frontity",
-    "frontity-theme"
-  ],
+  "keywords": ["frontity", "frontity-theme"],
   "homepage": "https://frontity.org",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/frontity/frontity.git"
   },
+
+  "scripts": {
+    "dev": "cross-env MY_VARIABLE=xxx frontity dev",
+    "serve": "cross-env MY_VARIABLE=xxx frontity serve",
+    "build": "cross-env MY_VARIABLE=xxx frontity build"
+  },
+
   "bugs": {
     "url": "https://community.frontity.org"
   },
